# xcl

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c  run.sh
include/: xc  xc.h
src/: xc_array.c  xc_bool_array.c  xc_map.c  xc_mem.c  xc_str.c  xc_unicode_db.c  xc_util_func.c
test/: add_module  all_tests.h  run_tests  run_tests.sh  test  test.c  test.h  test_main.c  test_xcArrayInit.c  test_xcCompare.c  test_xcDebug_BlockSize.c
test/test_lib/: test.c  test.h
test/test_modules/: all_modules.c  test_xcArrayAppend.c  test_xcArrayDestroy.c  test_xcArrayExtend.c  test_xcArrayFilter.c  test_xcArrayFind.c  test_xcArrayFindAll.c  test_xcArrayFree.c  test_xcArrayGet.c  test_xcArrayInit.c  test_xcArrayInitFromCopy.c  test_xcArrayInitFromData.c  test_xcArrayInsert.c  test_xcArrayMove.c  test_xcArrayNew.c  test_xcArrayNewFromCopy.c  test_xcArrayNewFromData.c  test_xcArraySet.c  test_xcArraySort.c  test_xcArraySwap.c  test_xcCompare.c  test_xcDebug_BlockSize.c  test_xcMax.c  test_xcMin.c
tools/: gen_db.py
